--- a/index.html
+++ b/index.html
@@ -3,17 +3,41 @@
         <head>
             <meta charset="utf-8" />
             <title>LieroT</title>
-            <script src="./javascript/matopeli.js" type="text/javascript"></script>
+            <script src="./client/messagebroker.js" type="text/javascript"></script>
+            <script src="./client/messagehandler.js" type="text/javascript"></script>
+            <script src="./client/peli.js" type="text/javascript"></script>
+
             <script type="text/javascript">
                 function lataaPeli() {
-                    peli.alusta();
+                    peli = new Peli();
                 }
             </script>
         </head>
 
         <body onload="lataaPeli();">
+            <div id="kirjautuminen">
+                <fieldset>
+                    <legend><strong>Kirjautuminen</strong></legend>
+                    <p>
+                        K&auml;ytt&auml;j&auml;nimi: <input type="text" id="kayttajanimi" length="10">
+                        Salasana: <input type="password" id="salasana" length="10">
+                        <input id="kirjaudu" type="submit" value="kirjaudu" onclick="kirjaudu()">
+                    </p>
+                </fieldset>
+            </div>
             <div id="pelilauta">
                 <p>Lierot eivät lataudu!?!? Onko JavaScript sallittu selaimessasi?</p>
+            </div>
+            <div id="keskustelualue">
+                <fieldset>
+                    <legend><strong>Keskustelualue</strong></legend>
+                    <div id="viestialue" style="height:100px;overflow-y: auto;">Tämä on viestisäiliö
+                        <div id="viesti">Tämä on viesti</div>
+                    </div>
+                    <div id="lahetaviesti">
+                        <input type="text" id="keskusteluviesti" size="40" maxlength="100" onkeypress="return handleKeyPress()">
+                    </div>
+                </fieldset>
             </div>
         </body>
     </html>
