--- a/index.html
+++ b/index.html
@@ -3,41 +3,71 @@
         <head>
             <meta charset="utf-8" />
             <title>LieroT</title>
+            <script src="./client/peli.js" type="text/javascript"></script>
+            <script src="/client/sha-hash.js" type="text/javascript"></script>
             <script src="./client/messagebroker.js" type="text/javascript"></script>
             <script src="./client/messagehandler.js" type="text/javascript"></script>
-            <script src="./client/peli.js" type="text/javascript"></script>
-
+            <script src="./common/messages.js" type="text/javascript"></script>
             <script type="text/javascript">
-                function lataaPeli() {
-                    peli = new Peli();
+            function lataaLieroT() {
+                peli = new Peli();
+            }
+            function kirjaudu() {
+                // Tarkista syötteet
+                if (document.getElementById("kayttajanimi").value && document.getElementById("salasana").value) {
+                    console.log(document.getElementById("kayttajanimi").value);
+                    console.log(document.getElementById("salasana").value);
+
+                    // Lähetä kirjautumispyyntö
+                    var msg = messages.message.AUTH_REQ.new();
+                    msg.username = document.getElementById("kayttajanimi").value;
+                    msg.password = Sha1.hash(document.getElementById("salasana").value);
+                    peli.messageBroker.send(msg);
                 }
+            }
+
+            function handleKeypress(event) {
+                if (event.which == 13 || event.keyCode == 13) {
+                    // Lähetä tekstirimpsu jos sen pituus > 0
+                    var chatmsg = document.getElementById('keskusteluviesti').value;
+                    if (chatmsg) {
+                        var msg = messages.message.CHAT_SYNC.new();
+                        msg.username = document.getElementById('kayttajanimi').value;
+                        msg.text = chatmsg;
+                        peli.messageBroker.send(msg);
+                        document.getElementById('keskusteluviesti').value = "";
+                    }
+                    return false;
+                }
+                    return true;
+            }
             </script>
         </head>
 
-        <body onload="lataaPeli();">
-            <div id="kirjautuminen">
-                <fieldset>
-                    <legend><strong>Kirjautuminen</strong></legend>
-                    <p>
-                        K&auml;ytt&auml;j&auml;nimi: <input type="text" id="kayttajanimi" length="10">
-                        Salasana: <input type="password" id="salasana" length="10">
-                        <input id="kirjaudu" type="submit" value="kirjaudu" onclick="kirjaudu()">
-                    </p>
-                </fieldset>
-            </div>
+        <body onload="lataaLieroT();">
+          <div id="kirjautuminen">
+            <fieldset>
+              <legend><strong>Kirjautuminen</strong></legend>
+              <p>
+                Käyttäjänimi: <input type="text" id="kayttajanimi" length="10">
+                Salasana: <input type="password" id="salasana" length="10">
+                <input id="kirjaudu_painike" type="submit" value="Kirjaudu" onclick="kirjaudu()">
+              </p>
+            </fieldset>
+          </div>
             <div id="pelilauta">
-                <p>Lierot eivät lataudu!?!? Onko JavaScript sallittu selaimessasi?</p>
+                <p>LieroT ei lataudu!?!? Onko JavaScript sallittu selaimessasi?</p>
             </div>
-            <div id="keskustelualue">
-                <fieldset>
-                    <legend><strong>Keskustelualue</strong></legend>
-                    <div id="viestialue" style="height:100px;overflow-y: auto;">Tämä on viestisäiliö
-                        <div id="viesti">Tämä on viesti</div>
-                    </div>
-                    <div id="lahetaviesti">
-                        <input type="text" id="keskusteluviesti" size="40" maxlength="100" onkeypress="return handleKeyPress()">
-                    </div>
-                </fieldset>
+            <div id="chatti">
+            <fieldset>
+              <legend><strong>Keskustelu</strong></legend>
+                <div id="keskustelualue" style="height:100px;overflow-Y:auto;">
+                    <div id="viestialue"></div>
+                </div>
+                <div id="lahetaviesti">
+                    L&auml;het&auml: <input type="text" id="keskusteluviesti" size="40" maxlength="100" onkeypress="return handleKeypress(event)">
+                </div>
+            </fieldset>
             </div>
         </body>
     </html>
