--- a/index.html
+++ b/index.html
@@ -1,88 +1,109 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <meta charset="utf-8" />
-            <title>LieroT</title>
-            <script src="./client/peli.js" type="text/javascript"></script>
-            <script src="/client/sha-hash.js" type="text/javascript"></script>
-            <script src="./client/messagebroker.js" type="text/javascript"></script>
-            <script src="./client/messagehandler.js" type="text/javascript"></script>
-            <script src="./common/messages.js" type="text/javascript"></script>
-            <script type="text/javascript">
-            function lataaLieroT() {
-                peli = new Peli();
-            }
-            function kirjaudu() {
-                // Tarkista syötteet
-                if (document.getElementById("kayttajanimi").value && document.getElementById("salasana").value) {
-                    console.log(document.getElementById("kayttajanimi").value);
-                    console.log(document.getElementById("salasana").value);
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>LieroT</title>
+    <script src="./client/game.js" type="text/javascript"></script>
+    <script src="/client/sha-hash.js" type="text/javascript"></script>
+    <script src="./client/messagebroker.js" type="text/javascript"></script>
+    <script src="./client/messagehandler.js" type="text/javascript"></script>
+    <script src="./common/messages.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        function lataaLieroT() {
+            peli = new Peli();
+        }
 
-                    // Lähetä kirjautumispyyntö
-                    var msg = messages.message.AUTH_REQ.new();
-                    msg.username = document.getElementById("kayttajanimi").value;
-                    msg.passwordhash = Sha1.hash(document.getElementById("salasana").value);
-                    peli.messageBroker.send(msg);
+        function kirjaudu() {
+            // Tarkista syötteet
+            if (document.getElementById("kayttajanimi").value && document.getElementById("salasana").value) {
+                // Lähetä kirjautumispyyntö
+                var msg = messages.message.AUTH_REQ.new();
+                msg.username = document.getElementById("kayttajanimi").value;
+                msg.passwordhash = null; // Sha1.hash(document.getElementById("salasana").value);
+                peli.messageHandler.send(msg);
+            }
+        }
+
+        function rekisteroidy() {
+            // Tarkista syötteet
+            if (document.getElementById("kayttajanimi").value && document.getElementById("salasana").value) {
+                // Lähetä kirjautumispyyntö
+                var msg = messages.message.REG_REQ.new();
+                msg.username = document.getElementById("kayttajanimi").value;
+                msg.passwordhash = Sha1.hash(document.getElementById("salasana").value);
+                peli.messageHandler.send(msg);
+            }
+        }
+
+        function aloitaPeli() {
+            // Tarkista syötteet
+            // Lähetä kirjautumispyyntö
+            var msg = messages.message.QUEUE_MATCH.new();
+            msg.username = peli.messageHandler.getUsername();
+            peli.messageHandler.send(msg);
+        }
+
+        function poistu() {
+            // TODO: lähetä LOGOUT-viesti palvelimelle?
+            location.reload();
+        }
+
+        function handleKeypress(event) {
+            if (event.which == 13 || event.keyCode == 13) {
+                // Lähetä tekstirimpsu jos sen pituus > 0
+                var chatmsg = document.getElementById('keskusteluviesti').value;
+                if (chatmsg) {
+                    var msg = messages.message.CHAT_SYNC.new();
+                    msg.username = peli.messageHandler.getUsername();
+                    msg.text = chatmsg;
+                    peli.messageHandler.send(msg);
+                    document.getElementById('keskusteluviesti').value = "";
                 }
+                return false;
             }
+            return true;
+        }
 
-            function rekisteroidy() {
-                // Tarkista syötteet
-                if (document.getElementById("kayttajanimi").value && document.getElementById("salasana").value) {
-                    console.log(document.getElementById("kayttajanimi").value);
-                    console.log(document.getElementById("salasana").value);
+    </script>
+</head>
 
-                    // Lähetä kirjautumispyyntö
-                    var msg = messages.message.REG_REQ.new();
-                    msg.username = document.getElementById("kayttajanimi").value;
-                    msg.passwordhash = Sha1.hash(document.getElementById("salasana").value);
-                    peli.messageBroker.send(msg);
-                }
-            }
-
-            function handleKeypress(event) {
-                if (event.which == 13 || event.keyCode == 13) {
-                    // Lähetä tekstirimpsu jos sen pituus > 0
-                    var chatmsg = document.getElementById('keskusteluviesti').value;
-                    if (chatmsg) {
-                        var msg = messages.message.CHAT_SYNC.new();
-                        msg.username = document.getElementById('kayttajanimi').value;
-                        msg.text = chatmsg;
-                        peli.messageBroker.send(msg);
-                        document.getElementById('keskusteluviesti').value = "";
-                    }
-                    return false;
-                }
-                    return true;
-            }
-            </script>
-        </head>
-
-        <body onload="lataaLieroT();">
-          <div id="kirjautuminen">
-            <fieldset>
-              <legend><strong>Kirjautuminen</strong></legend>
-              <p>
+<body onload="lataaLieroT();">
+<div id="kirjautuminen">
+    <div id="kirjautumisikkuna">
+    <fieldset>
+        <legend><strong>Kirjautuminen</strong></legend>
+        <div id="infoteksti">
+            <p>
                 Käyttäjänimi: <input type="text" id="kayttajanimi" length="10">
                 Salasana: <input type="password" id="salasana" length="10">
                 <input id="kirjaudu_painike" type="submit" value="Kirjaudu" onclick="kirjaudu()">
                 <input id="rekisteroidy_painike" type="submit" value="Rekisteroidy" onclick="rekisteroidy()">
-              </p>
-            </fieldset>
-          </div>
-            <div id="pelilauta">
-                <p>LieroT ei lataudu!?!? Onko JavaScript sallittu selaimessasi?</p>
-            </div>
-            <div id="chatti">
-            <fieldset>
-              <legend><strong>Keskustelu</strong></legend>
-                <div id="keskustelualue" style="height:100px;overflow-Y:auto;">
-                    <div id="viestialue"></div>
-                </div>
-                <div id="lahetaviesti">
-                    L&auml;het&auml: <input type="text" id="keskusteluviesti" size="40" maxlength="100" onkeypress="return handleKeypress(event)">
-                </div>
-            </fieldset>
-            </div>
-        </body>
-    </html>
+            </p>
+        </div>
+    </fieldset>
+    </div>
+</div>
+<div id="pelilauta">
+    <p>LieroT ei lataudu!?!? Onko JavaScript sallittu selaimessasi?</p>
+</div>
+<div id="chatti" style="width:50%;">
+    <fieldset>
+        <legend><strong>Keskustelu</strong></legend>
+        <div id="keskustelualue" style="height:100px;overflow-Y:auto;">
+            <div id="viestialue"></div>
+        </div>
+        <div id="lahetaviesti">
+            L&auml;het&auml: <input type="text" id="keskusteluviesti" size="40" maxlength="100" onkeypress="return handleKeypress(event)">
+        </div>
+    </fieldset>
+</div>
+<div id="rankinglista" style="width:50%;">
+    <fieldset>
+        <legend><strong>Ranking-tilasto</strong></legend>
+        <div id="ranking" style="height:100px;overflow-Y:auto;">
+            <div id="pelaaja"></div>
+        </div>
+    </fieldset>
+</div>
+</body>
+</html>
