--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./client/messagebroker.js" type="text/javascript"></script>
     <script src="./client/messagehandler.js" type="text/javascript"></script>
     <script src="./common/messages.js" type="text/javascript"></script>
+    <audio src="../media/completetask_0.mp3" id="pick_audio" preload="auto"></audio>
+    <audio src="../media/bicycle_1.ogg" id="challenge_request_audio" preload="auto"></audio>
     <link rel="stylesheet" href="client/style.css">
     <script type="text/javascript">
         function lataaLieroT() {
