--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./common/messages.js" type="text/javascript"></script>
     <audio src="../media/completetask_0.ogg" id="pick_audio" preload="auto"></audio>
     <audio src="../media/bicycle_1.ogg" id="challenge_request_audio" preload="auto"></audio>
+    <audio src="../media/retro.ogg" id="retro_music" preload="auto"></audio>
     <link rel="stylesheet" href="client/style.css">
     <script type="text/javascript">
         function lataaLieroT() {
