--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="utf-8" />
     <title>LieroT</title>
     <script src="./client/game.js" type="text/javascript"></script>
-    <script src="/client/sha-hash.js" type="text/javascript"></script>
+    <script src="./client/sha-hash.js" type="text/javascript"></script>
     <script src="./client/messagebroker.js" type="text/javascript"></script>
     <script src="./client/messagehandler.js" type="text/javascript"></script>
     <script src="./common/messages.js" type="text/javascript"></script>
+    <script src="./client/RGraph/libraries/RGraph.common.core.js" ></script>
+    <script src="./client/RGraph/libraries/RGraph.common.dynamic.js" ></script>
+    <script src="./client/RGraph/libraries/RGraph.common.tooltips.js" ></script>
+    <script src="./client/RGraph/libraries/RGraph.bar.js" ></script>
+    <script src="./client/RGraph/libraries/RGraph.line.js" ></script>
+    <script src="./client/RGraph/libraries/RGraph.drawing.js" ></script>
+    <!--[if lt IE 9]><script src="client/RGraph/libraries/combined.html/excanvas.js"></script><![endif]-->
+
     <audio src="../media/completetask_0.ogg" id="pick_audio" preload="auto"></audio>
     <audio src="../media/bicycle_1.ogg" id="challenge_request_audio" preload="auto"></audio>
     <audio src="../media/retro.ogg" id="retro_music" preload="auto"></audio>
+    <audio src="../media/doh_wav_cut.ogg" id="doh_audio" preload="auto"></audio>
     <link rel="stylesheet" href="client/style.css">
     <script type="text/javascript">
         function lataaLieroT() {
@@ -34,6 +43,7 @@
             if (document.getElementById("kayttajanimi").value && document.getElementById("salasana").value) {
                 // Lähetä kirjautumispyyntö
                 var msg = messages.message.REG_REQ.new();
+                msg.username = document.getElementById("kayttajanimi").value;
                 msg.passwordhash = Sha1.hash(document.getElementById("salasana").value);
                 game.messageHandler.send(msg);
             }
@@ -134,6 +144,12 @@
             <legend><strong>Server log</strong></legend>
             <div id="palvelinloki">
             </div>
+        </fieldset>
+    </div>
+    <div id="graphs">
+        <fieldset>
+            <legend><strong>Graphs</strong></legend>
+            <canvas id="cvs" width="1000" height="250" !style="border: 1px solid gray">[No canvas support]</canvas>
         </fieldset>
     </div>
     <div id="haastelaatikko">
