--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <fieldset>
             <legend><strong>Ranking</strong></legend>
             <div id="pelaaja">
+                Wobotti
             </div>
         </fieldset>
     </div>
